GetSelectedIndex now always returns a value and NS_OK The value first comes from the frame, then from the presstate then from the default selection in the content it's checked into the branch, this is the tip check in r=mscott b=32726